--- a/app/views/custom_report/reports/_form.html.slim
+++ b/app/views/custom_report/reports/_form.html.slim
@@ -3,16 +3,19 @@ css:
     border: 1px solid #999999;
     font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
   }
+  textarea {
+    width: 600px;
+  }
 
 = form_for @report, :role => "form" do |f|
   = hidden_field_tag "return_path", @return_path
   div.form-group
     = f.label :name
     = f.text_field :name, :class => "form-control"
-  - if defined?(Administrator) and Administrator.is_a?(ActiveRecord::Base)
+  - if administrator_class
     div.form-group
       = f.label :administrator_id, "Administrator"
-      = f.select :administrator_id, options_for_select([["Everybody", nil]] + Administrator.all.map { |x| [x.name, x.id] }, f.object.new_record? ? current_admin.id : f.object.administrator_id), :class => "form-control"
+      = f.select :administrator_id, options_for_select([["Everybody", nil]] + administrator_class.all.map { |x| [x.name, x.id] }, f.object.new_record? ? nil : f.object.administrator_id), :class => "form-control"
   div.form-group
     = f.label :category
     = f.text_field :category
@@ -21,7 +24,7 @@ css:
     = f.text_area :description, :rows => 5
   div.form-group
     = f.label :scope
-    = f.text_field :scope, :size => 110
+    = f.text_area :scope, :size => 110
   div.form-group
     = f.label :columns_yaml, "Columns"
     = f.text_area :columns_yaml, :class => "columns", :cols => 80
